Fix home page layout on mobile#3

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -218,7 +218,7 @@
 
     #home .text {
         width: 140%;
-        margin: 0 0 18vh 20%;
+        margin: 0 0 0 20%;
     }
 
     #exp .table {
